<resources>
    <string name="app_name">Orgs</string>
    <string name="car_model">Car model</string>
    <string name="car_price">Car price</string>
    <string name="car_name">Car name</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="ImageForms">ImageForms</string>
    <string name="add">ADD</string>
    <string name="add_imagem_url">Add imagem URL</string>
    <string name="add_image">Add image</string>
</resources>